--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -8,7 +8,8 @@
 }
 body{
     color: #666;
-    background: url("./imagenes/fondo.jpg");
+    background-color: rgb(43, 43, 43);
+    background: url("/imagenes/fondo.jpg");
     background-position:center center;
     height: 100vh;
 }
@@ -16,7 +17,7 @@ header{
     position: fixed;
     width: 100%;
     background-color: rgba(0, 0, 0, .4);
-    /*z-index: 100;*/
+    
     
     
 }
